integration_tests/codegen_fail/fail/union/enum_name_double_underscored.rs
use juniper::{GraphQLObject, GraphQLUnion};

#[derive(GraphQLUnion)]
enum __Character {
    A(Human),
}

#[derive(GraphQLObject)]
pub struct Human {
    id: String,
}

fn main() {}
